<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <EditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default_value"
        android:inputType="text"
        android:singleLine="true"
        />

    <ListPreference
        android:title="@string/pref_temperature_units"
        android:key="@string/pref_temperature_units_key"
        android:dialogTitle="@string/pref_temperature_units"
        android:entryValues="@array/temperature_units"
        android:summary=""
        android:entries="@array/temperature_units"
        android:defaultValue="@string/pref_temperature_units_default"
        />

</PreferenceScreen>